--- a/MyEssentialOilRemedies/iphone.storyboard
+++ b/MyEssentialOilRemedies/iphone.storyboard
@@ -433,6 +433,52 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HYI-o5-Lxu">
+                                <rect key="frame" x="2" y="108" width="322" height="510"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Oil Name:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nn4-fY-4dj">
+                                        <rect key="frame" x="8" y="5" width="74.5" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Oil Name on Bottle" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="Mfa-sn-vyT">
+                                        <rect key="frame" x="95" y="5" width="262" height="22"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="words" spellCheckingType="yes"/>
+                                    </textField>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ftK-5r-cr9">
+                                        <rect key="frame" x="12" y="90" width="349" height="400"/>
+                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </tableView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bRf-ph-uKv">
+                                        <rect key="frame" x="145" y="41" width="32" height="30"/>
+                                        <size key="titleShadowOffset" width="1" height="1"/>
+                                        <state key="normal" title="Add">
+                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="btnAddOil:" destination="PFe-pI-FH2" eventType="touchUpInside" id="Lnh-H4-q8r"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="bRf-ph-uKv" firstAttribute="top" secondItem="Mfa-sn-vyT" secondAttribute="bottom" constant="14" id="BxV-7a-Z2M"/>
+                                    <constraint firstItem="Mfa-sn-vyT" firstAttribute="top" secondItem="HYI-o5-Lxu" secondAttribute="topMargin" constant="-3" id="ERU-NV-JjA"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="ftK-5r-cr9" secondAttribute="trailing" constant="-47" id="EXU-ig-MMT"/>
+                                    <constraint firstItem="Nn4-fY-4dj" firstAttribute="top" secondItem="HYI-o5-Lxu" secondAttribute="topMargin" constant="-3" id="IRu-12-WYa"/>
+                                    <constraint firstItem="ftK-5r-cr9" firstAttribute="leading" secondItem="HYI-o5-Lxu" secondAttribute="leadingMargin" constant="4" id="LjX-q7-4BH"/>
+                                    <constraint firstAttribute="bottomMargin" secondItem="ftK-5r-cr9" secondAttribute="bottom" constant="12" id="U8i-XJ-BQD"/>
+                                    <constraint firstItem="ftK-5r-cr9" firstAttribute="top" secondItem="bRf-ph-uKv" secondAttribute="bottom" constant="19" id="XJb-7q-5Cb"/>
+                                    <constraint firstItem="Mfa-sn-vyT" firstAttribute="leading" secondItem="Nn4-fY-4dj" secondAttribute="trailing" constant="12.5" id="XKs-dI-CSr"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="bRf-ph-uKv" secondAttribute="trailing" constant="137" id="afK-3k-dLf"/>
+                                    <constraint firstItem="bRf-ph-uKv" firstAttribute="leading" secondItem="HYI-o5-Lxu" secondAttribute="leadingMargin" constant="137" id="cw6-1m-9QV"/>
+                                    <constraint firstItem="Nn4-fY-4dj" firstAttribute="leading" secondItem="HYI-o5-Lxu" secondAttribute="leadingMargin" id="ecQ-vE-MC1"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="Mfa-sn-vyT" secondAttribute="trailing" constant="-43" id="yfP-aP-Sdc"/>
+                                </constraints>
+                            </view>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ufb-EQ-g7s">
                                 <rect key="frame" x="-3" y="63" width="381" height="44"/>
                                 <color key="backgroundColor" red="0.66799789669999998" green="0.47512125970000002" blue="0.25860109930000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -514,13 +560,17 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="HYI-o5-Lxu" firstAttribute="top" secondItem="Ufb-EQ-g7s" secondAttribute="bottom" constant="1" id="6Fq-vy-Of4"/>
                             <constraint firstItem="kdK-gF-bqZ" firstAttribute="leading" secondItem="d8a-t1-Jae" secondAttribute="leadingMargin" constant="-14" id="6jw-kS-yl4"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="HYI-o5-Lxu" secondAttribute="trailing" constant="35" id="J58-d5-HkX"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Ufb-EQ-g7s" secondAttribute="trailing" constant="-19" id="LF6-zj-7qy"/>
+                            <constraint firstItem="xzB-3O-xYE" firstAttribute="top" secondItem="HYI-o5-Lxu" secondAttribute="bottom" id="QyC-Kj-7rJ"/>
                             <constraint firstItem="Ufb-EQ-g7s" firstAttribute="leading" secondItem="d8a-t1-Jae" secondAttribute="leadingMargin" constant="-19" id="XZz-o3-EkB"/>
                             <constraint firstItem="xzB-3O-xYE" firstAttribute="top" secondItem="kdK-gF-bqZ" secondAttribute="bottom" id="YL2-ii-K7j"/>
                             <constraint firstAttribute="trailingMargin" secondItem="kdK-gF-bqZ" secondAttribute="trailing" constant="13" id="bT3-9d-YEI"/>
                             <constraint firstItem="Ufb-EQ-g7s" firstAttribute="top" secondItem="d8a-t1-Jae" secondAttribute="topMargin" constant="-1" id="n46-Xd-wsL"/>
                             <constraint firstItem="kdK-gF-bqZ" firstAttribute="top" secondItem="Ufb-EQ-g7s" secondAttribute="bottom" constant="1" id="ssO-lF-iHe"/>
+                            <constraint firstItem="HYI-o5-Lxu" firstAttribute="leading" secondItem="d8a-t1-Jae" secondAttribute="leadingMargin" constant="-14" id="vbB-ao-PCo"/>
                         </constraints>
                     </view>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
@@ -540,24 +590,6 @@
             <point key="canvasLocation" x="1616.8" y="784.85757121439292"/>
         </scene>
         <!--View Controller-->
-        <scene sceneID="dtx-cG-XdH">
-            <objects>
-                <viewController id="I9N-HY-zvM" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="U2u-Yv-cla"/>
-                        <viewControllerLayoutGuide type="bottom" id="UZb-i0-tGR"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="I89-a8-9oV">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="tC6-MS-8Ku" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2324" y="782.15892053973016"/>
-        </scene>
-        <!--View Controller-->
         <scene sceneID="JvO-wk-9Et">
             <objects>
                 <viewController id="SXO-jE-KhG" sceneMemberID="viewController">
@@ -568,60 +600,12 @@
                     <view key="view" contentMode="scaleToFill" id="ii7-c0-maq">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="HYI-o5-Lxu">
-                                <rect key="frame" x="2" y="112" width="371" height="506"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Oil Name:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nn4-fY-4dj">
-                                        <rect key="frame" x="8" y="25" width="74.5" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Oil Name on Bottle" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="Mfa-sn-vyT">
-                                        <rect key="frame" x="95" y="25" width="260" height="22"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits" autocapitalizationType="words" spellCheckingType="yes"/>
-                                    </textField>
-                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ftK-5r-cr9">
-                                        <rect key="frame" x="12" y="110" width="347" height="376"/>
-                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                    </tableView>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bRf-ph-uKv">
-                                        <rect key="frame" x="145" y="61" width="30" height="30"/>
-                                        <size key="titleShadowOffset" width="1" height="1"/>
-                                        <state key="normal" title="Add">
-                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        </state>
-                                        <connections>
-                                            <action selector="btnAddOil:" destination="PFe-pI-FH2" eventType="touchUpInside" id="Lnh-H4-q8r"/>
-                                        </connections>
-                                    </button>
-                                </subviews>
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstItem="bRf-ph-uKv" firstAttribute="top" secondItem="Mfa-sn-vyT" secondAttribute="bottom" constant="14" id="BxV-7a-Z2M"/>
-                                    <constraint firstItem="Mfa-sn-vyT" firstAttribute="top" secondItem="HYI-o5-Lxu" secondAttribute="topMargin" constant="-3" id="ERU-NV-JjA"/>
-                                    <constraint firstAttribute="trailingMargin" secondItem="ftK-5r-cr9" secondAttribute="trailing" constant="-47" id="EXU-ig-MMT"/>
-                                    <constraint firstItem="Nn4-fY-4dj" firstAttribute="top" secondItem="HYI-o5-Lxu" secondAttribute="topMargin" constant="-3" id="IRu-12-WYa"/>
-                                    <constraint firstItem="ftK-5r-cr9" firstAttribute="leading" secondItem="HYI-o5-Lxu" secondAttribute="leadingMargin" constant="4" id="LjX-q7-4BH"/>
-                                    <constraint firstAttribute="bottomMargin" secondItem="ftK-5r-cr9" secondAttribute="bottom" constant="12" id="U8i-XJ-BQD"/>
-                                    <constraint firstItem="ftK-5r-cr9" firstAttribute="top" secondItem="bRf-ph-uKv" secondAttribute="bottom" constant="19" id="XJb-7q-5Cb"/>
-                                    <constraint firstItem="Mfa-sn-vyT" firstAttribute="leading" secondItem="Nn4-fY-4dj" secondAttribute="trailing" constant="12.5" id="XKs-dI-CSr"/>
-                                    <constraint firstAttribute="trailingMargin" secondItem="bRf-ph-uKv" secondAttribute="trailing" constant="137" id="afK-3k-dLf"/>
-                                    <constraint firstItem="bRf-ph-uKv" firstAttribute="leading" secondItem="HYI-o5-Lxu" secondAttribute="leadingMargin" constant="137" id="cw6-1m-9QV"/>
-                                    <constraint firstItem="Nn4-fY-4dj" firstAttribute="leading" secondItem="HYI-o5-Lxu" secondAttribute="leadingMargin" id="ecQ-vE-MC1"/>
-                                    <constraint firstAttribute="trailingMargin" secondItem="Mfa-sn-vyT" secondAttribute="trailing" constant="-43" id="yfP-aP-Sdc"/>
-                                </constraints>
-                            </view>
-                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zfm-rc-DEv" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2137" y="88"/>
+            <point key="canvasLocation" x="2334" y="784"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="vHI-wy-bIc">
